--- a/.github/workflows/notify-parent-repo.yml
+++ b/.github/workflows/notify-parent-repo.yml
@@ -25,5 +25,5 @@ jobs:
             -X POST \
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token ${{ env.PERSONAL_ACCESS_TOKEN }}" \
-            https://api.github.com/repos/${{ env.PARENT_REPO }}/actions/workflows/${{ env.WORKFLOW_ID }}/dispatches \
+            --url https://api.github.com/repos/${{ env.PARENT_REPO }}/actions/workflows/${{ env.WORKFLOW_ID }}/dispatches \
             -d '{"ref":"${{ env.PARENT_BRANCH }}"}'
