--- a/.github/workflows/notify-parent-repo.yml
+++ b/.github/workflows/notify-parent-repo.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Call the Create a workflow dispatch event API to update parent repo
+      # https://docs.github.com/en/rest/reference/actions#create-a-workflow-dispatch-event
       - name: Github REST API 
         env:
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
@@ -20,10 +22,4 @@ jobs:
           # curl https://api.github.com/repos/autifyhq/for-mobile-ci-integration-samples/actions/workflows/update-submodule.yml
           WORKFLOW_ID: 10802447
         run: |          
-          # https://docs.github.com/en/rest/reference/actions#create-a-workflow-dispatch-event
-          curl \ 
-            -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: token ${{ env.PERSONAL_ACCESS_TOKEN }}" \
-            "https://api.github.com/repos/${{ env.PARENT_REPO }}/actions/workflows/${{ env.WORKFLOW_ID }}/dispatches" \
-            -d '{"ref":"${{ env.PARENT_BRANCH }}"}'
+          curl -X POST -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ env.PERSONAL_ACCESS_TOKEN }}" "https://api.github.com/repos/${{ env.PARENT_REPO }}/actions/workflows/${{ env.WORKFLOW_ID }}/dispatches" -d '{"ref":"${{ env.PARENT_BRANCH }}"}'
